<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:ignore="Overdraw" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/background_div" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_login"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_above="@+id/LinearLayout1"
        android:layout_marginBottom="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_centerInParent="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/back_blue_line"
            android:drawableLeft="@mipmap/ic_account"
            android:drawablePadding="13dp"
            android:hint="手机/用户名"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:text="admin"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/back_blue_line"
            android:drawableLeft="@mipmap/ic_pwd"
            android:layout_marginTop="20dp"
            android:drawablePadding="13dp"
            android:hint="输入密码"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:textSize="22sp" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="#000000"
            android:textSize="22sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/LinearLayout1"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/lbl_login_register_link"
            android:textColor="@color/blue_1"
            android:textColorLink="#FF0066CC" />
    </RelativeLayout>

</RelativeLayout>