<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/LinearLayout12"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android1:background="@color/blue_1" >

        <ImageView
            android1:id="@+id/btn_users_return"
            android1:layout_width="30dp"
            android1:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_back"
            android1:text="@string/lbl_return" />

        <TextView
            android1:id="@+id/tv_item_my_recipe_updatetime"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_centerHorizontal="true"
            android1:layout_centerVertical="true"
            android:textColor="@color/white"
            android1:text="@string/lbl_user_regedit"
            android1:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <ScrollView
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:scrollbars="none"
        android:layout_marginRight="30dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android1:layout_marginLeft="2dp"
            android1:layout_marginRight="2dp"
            android1:layout_marginTop="30dp"
            android:background="@drawable/background_div"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户名："
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:background="@drawable/back_blue_bottom_line"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="13dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="12dp"
                    android:inputType="text"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="密    码："
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/et_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/back_blue_bottom_line"
                    android:drawablePadding="13dp"
                    android:hint=""
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:paddingLeft="10dp"
                    android:ems="60"
                    android:paddingTop="12dp"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="年    龄："
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/et_reg_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/back_blue_bottom_line"
                    android:drawablePadding="13dp"
                    android:hint=""
                    android:inputType="number"
                    android:paddingBottom="12dp"
                    android:paddingLeft="10dp"
                    android:ems="2"
                    android:paddingTop="12dp"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="邮    箱："
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/et_reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/back_blue_bottom_line"
                    android:drawablePadding="13dp"
                    android:hint=""
                    android:inputType="textEmailAddress"
                    android:paddingBottom="12dp"
                    android:paddingLeft="10dp"
                    android:ems="60"
                    android:paddingTop="12dp"
                    android:textSize="18sp" />

            </LinearLayout>

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="15dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android1:gravity="center_vertical|right" >

                <RadioGroup
                    android1:id="@+id/rg_sex_group"
                    android1:layout_width="fill_parent"
                    android1:layout_height="wrap_content"
                    android1:orientation="horizontal" >

                    <RadioButton
                        android1:id="@+id/rb_man"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:layout_weight="0.5"
                        android1:checked="true"
                        android1:text="@string/lbl_man" />

                    <RadioButton
                        android1:id="@+id/rb_women"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:layout_weight="0.5"
                        android1:text="@string/lbl_woman" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android1:gravity="center_vertical|right" >

                <Button
                    android1:id="@+id/btn_regedit"
                    android1:layout_width="match_parent"
                    android1:layout_height="wrap_content"
                    android1:layout_gravity="right"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_bac_login_selector"
                    android1:layout_marginRight="10dp"
                    android1:text="@string/btn_regedit" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>